--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,5 @@
 <nav>
+    <img src="{{url_for('static', filename=logo)}}" alt="Logo">
     <ul>
         <li>homepage</li>
         <li>adicionar</li>
