--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
     
     {% block link %}
     {% endblock %}
-
-    <title>MEU SERVER</title>
+    
+    <title>VENDINHA</title>
 
 </head>
 <body>
