--- a/templates/nav.html
+++ b/templates/nav.html
@@ -4,8 +4,7 @@
     </a>
     <ul>
         <li><a href="/">homepage</a></li>
-        <li><a href="/add_produto">adicionar</a></li>
+        <li><a href="/produto">Produto</a></li>
         <li><a href="/del_produto">deletar</a></li>
-        <li><a href="/up_produto">atualizar</a></li>
     </ul>
 </nav>
